<resources>
    <string name="app_name">CafeDD</string>
    <string name="welcome_text">WELCOME!</string>
    <string name="user_name_hint">Insert user name</string>
    <string name="insert_password_hint">Insert password</string>
    <string name="enter_btn">ENTER</string>
    <string name="content_description_image_logo_dunkin_donuts">Image logo - Dunkin Donuts</string>
    <string name="hello_s_what_do_you_want">Hello, %s. What do you want?</string>
    <string name="tea">TEA</string>
    <string name="coffee">COFFIE</string>
    <string name="additives">What we can add to your %s?</string>
    <string name="sugar">sugar</string>
    <string name="milk">milk</string>
    <string name="lemon">lemon</string>
    <string name="type_of_drink">Choose the type of your drink</string>
    <string name="make_an_order">Make an order</string>
    <string name="tv_name">Name:</string>
    <string name="tv_drink">Drink: \n</string>
    <string name="tv_typeDrink">"Type of drink: "</string>
    <string name="tv_additives">"Additives: "</string>
    <string name="error_empty_fields">"Please, fill all fields "</string>


    <array name="types_of_tea">
        <item>Black</item>
        <item>Green</item>
        <item>Red</item>
    </array>

    <array name="types_of_coffie">
        <item>Black</item>
        <item>Capucchino</item>
        <item>Americano</item>
        <item>Raf</item>
        <item>Latte</item>
    </array>
</resources>